force-app/main/default/objects/ProcessLog__c/ProcessLog__c.object-meta.xml
<CustomObject>
    <label>ProcessLog</label>
    <nameField>
        <displayFormat>{YYYY}{MM}{DD}-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ProcessLogs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>