force-app/main/default/objects/ProcessLog__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>ProcessLogs</relationshipLabel>
    <relationshipName>ProcessLogs</relationshipName>
    <type>Lookup</type>
</CustomField>