force-app/main/default/objects/ProcessLog__c/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <label>Code</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>