force-app/main/default/objects/ProcessLog__c/fields/Label__c.field-meta.xml
<CustomField>
    <fullName>Label__c</fullName>
    <label>Libellé</label>
    <length>80</length>
    <type>Text</type>
</CustomField>