force-app/main/default/objects/ProcessLog__c/fields/SubscriptionZID__c.field-meta.xml
<CustomField>
    <fullName>SubscriptionZID__c</fullName>
    <label>SubscriptionZID</label>
    <length>32</length>
    <type>Text</type>
</CustomField>