force-app/main/default/objects/ProcessLog__c/fields/Suivi__c.field-meta.xml
<CustomField>
    <fullName>Suivi__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Suivi</label>
    <type>Checkbox</type>
</CustomField>