force-app/main/default/objects/ProcessLog__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CREATED_DATE</columns>
    <columns>Duration__c</columns>
    <columns>Process__c</columns>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>AccountZID__c</columns>
    <columns>Case__c</columns>
    <columns>Code__c</columns>
    <columns>Message__c</columns>
    <columns>SubscriptionName__c</columns>
    <columns>SubscriptionZID__c</columns>
    <columns>StartTime__c</columns>
    <columns>EndTime__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>